--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@
     --border: hsl(12 6.5% 15.1%);
     --input: hsl(12 6.5% 15.1%);
     --ring: hsl(48, 84%, 43%);
+    --accept: hsl(120 62.8% 30.6%);
 
     background-color: var(--background);
     color: var(--primary);
@@ -148,19 +149,19 @@
     min-width: 75px;
 }
 
-.dashboard-buttons {
+.dashboard {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
     margin-top: 40px;
     justify-items: center;
 }
 
-.dashboard-buttons button {
+.dashboard-button {
     width: 80%;
     height: 100%;
     padding: 20px;
-    font-size: 24px;
+    font-size: 20px;
     background-color: var(--primary);
     color: var(--primary-foreground);
     border: none;
@@ -169,6 +170,94 @@
     transition: background-color 0.3s ease;
 }
 
-.dashboard-buttons button:hover {
+.dashboard-button:hover {
+    background-color: var(--ring);
+}
+
+.prompt-fields {
+    padding: 20px;
+    background-color: var(--secondary);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.styled-textarea {
+    width: 100%;
+    padding: 10px;
+    border: 2px solid var(--primary);
+    border-radius: 8px;
+    resize: none;
+    background-color: var(--secondary);
+    color: var(--foreground);
+}
+
+.styled-button {
+    padding: 10px 20px;
+    background-color: var(--primary);
+    color: var(--primary-foreground);
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    align-self: flex-start;
+}
+
+.styled-button:disabled {
+    background-color: var(--muted);
+    color: var(--muted-foreground);
+    cursor: not-allowed;
+}
+
+.styled-button:hover:enabled {
+    background-color: var(--ring);
+}
+
+.delete-button {
+    width: 80%;
+    height: 100%;
+    padding: 20px;
+    font-size: 20px;
+    background-color: var(--primary);
+    color: var(--primary-foreground);
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.delete-button:hover {
+    background-color: var(--destructive);
+    color: var(--destructive-foreground);
+}
+
+.under-dashboard {
+    padding-top: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.under-dashboard button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.under-dashboard-add {
+    background-color: var(--accept);
+    color: var(--destructive-foreground);
+}
+
+.under-dashboard-delete {
+    background-color: var(--destructive);
+    color: var(--destructive-foreground);
+}
+
+.under-dashboard button:hover {
     background-color: var(--ring);
 }
