--- a/src/index.css
+++ b/src/index.css
@@ -124,6 +124,10 @@
     transition: all 0.3s ease;
 }
 
+.upload-button{
+    cursor: pointer;
+}
+
 .message {
     border: 2px solid var(--primary);
     border-radius: 15px;
